fix: sem duas divs dentro de uma

--- a/src/Jogo 1/index.html
+++ b/src/Jogo 1/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/style.css" />
+		<link rel="stylesheet" href="style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -14,89 +14,95 @@
 		<title>Jogo do Alfabeto</title>
 	</head>
 	<body>
-		<section id="answers">
-			<section id="coluna1">
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
+		<main>
+			<header>
+				<h1>Jogo do Alfabeto</h1>
+			</header>
+			<section id="answers">
+				<section id="coluna1">
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+				</section>
+				<section id="coluna2">
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+					<div class="empty"></div>
+				</section>
 			</section>
-			<section id="coluna2">
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
-				<div class="empty"></div>
+			<section id="options">
+				<section>
+					<div class="fill" draggable="true">A</div>
+
+					<div class="fill" draggable="true">B</div>
+
+					<div class="fill" draggable="true">C</div>
+
+					<div class="fill" draggable="true">D</div>
+
+					<div class="fill" draggable="true">E</div>
+
+					<div class="fill" draggable="true">F</div>
+
+					<div class="fill" draggable="true">G</div>
+
+					<div class="fill" draggable="true">H</div>
+
+					<div class="fill" draggable="true">I</div>
+
+					<div class="fill" draggable="true">J</div>
+
+					<div class="fill" draggable="true">K</div>
+
+					<div class="fill" draggable="true">L</div>
+
+					<div class="fill" draggable="true">M</div>
+				</section>
+				<section>
+					<div class="fill" draggable="true">N</div>
+
+					<div class="fill" draggable="true">O</div>
+
+					<div class="fill" draggable="true">P</div>
+
+					<div class="fill" draggable="true">Q</div>
+
+					<div class="fill" draggable="true">R</div>
+
+					<div class="fill" draggable="true">S</div>
+
+					<div class="fill" draggable="true">T</div>
+					<div class="fill" draggable="true">U</div>
+					<div class="fill" draggable="true">V</div>
+					<div class="fill" draggable="true">W</div>
+					<div class="fill" draggable="true">X</div>
+
+					<div class="fill" draggable="true">Y</div>
+					<div class="fill" draggable="true">Z</div>
+				</section>
 			</section>
-		</section>
-		<section id="options">
-			<section>
-				<div class="fill" draggable="true">A</div>
-
-				<div class="fill" draggable="true">B</div>
-
-				<div class="fill" draggable="true">C</div>
-
-				<div class="fill" draggable="true">D</div>
-
-				<div class="fill" draggable="true">E</div>
-
-				<div class="fill" draggable="true">F</div>
-
-				<div class="fill" draggable="true">G</div>
-
-				<div class="fill" draggable="true">H</div>
-
-				<div class="fill" draggable="true">I</div>
-
-				<div class="fill" draggable="true">J</div>
-
-				<div class="fill" draggable="true">K</div>
-
-				<div class="fill" draggable="true">L</div>
-
-				<div class="fill" draggable="true">M</div>
-			</section>
-			<section>
-				<div class="fill" draggable="true">N</div>
-
-				<div class="fill" draggable="true">O</div>
-
-				<div class="fill" draggable="true">P</div>
-
-				<div class="fill" draggable="true">Q</div>
-
-				<div class="fill" draggable="true">R</div>
-
-				<div class="fill" draggable="true">S</div>
-
-				<div class="fill" draggable="true">T</div>
-				<div class="fill" draggable="true">U</div>
-				<div class="fill" draggable="true">V</div>
-				<div class="fill" draggable="true">W</div>
-				<div class="fill" draggable="true">X</div>
-
-				<div class="fill" draggable="true">Y</div>
-				<div class="fill" draggable="true">Z</div>
-			</section>
-		</section>
+			<button>Botão</button>
+		</main>
 
 		<script src="script.js"></script>
 	</body>
