feat: jogo 1 completo e jogo 2 fase 1 iniciado

--- a/src/Jogo 2/Fase 1/index.html
+++ b/src/Jogo 2/Fase 1/index.html
@@ -19,35 +19,10 @@
 				<h1>Jogo do Alfabeto</h1>
 			</header>
 			<section id="answers">
-				<section id="coluna1">
+				<section>
 					<div class="empty" id="A"></div>
 					<div class="empty" id="B"></div>
 					<div class="empty" id="C"></div>
-					<div class="empty" id="D"></div>
-					<div class="empty" id="E"></div>
-					<div class="empty" id="F"></div>
-					<div class="empty" id="G"></div>
-					<div class="empty" id="H"></div>
-					<div class="empty" id="I"></div>
-					<div class="empty" id="J"></div>
-					<div class="empty" id="K"></div>
-					<div class="empty" id="L"></div>
-					<div class="empty" id="M"></div>
-				</section>
-				<section id="coluna2">
-					<div class="empty" id="N"></div>
-					<div class="empty" id="O"></div>
-					<div class="empty" id="P"></div>
-					<div class="empty" id="Q"></div>
-					<div class="empty" id="R"></div>
-					<div class="empty" id="S"></div>
-					<div class="empty" id="T"></div>
-					<div class="empty" id="U"></div>
-					<div class="empty" id="V"></div>
-					<div class="empty" id="W"></div>
-					<div class="empty" id="X"></div>
-					<div class="empty" id="Y"></div>
-					<div class="empty" id="Z"></div>
 				</section>
 			</section>
 			<section id="options">
@@ -55,31 +30,21 @@
 					<div class="fill" draggable="true">B</div>
 					<div class="fill" draggable="true">H</div>
 					<div class="fill" draggable="true">T</div>
+				</section>
+				<section>
 					<div class="fill" draggable="true">R</div>
 					<div class="fill" draggable="true">J</div>
 					<div class="fill" draggable="true">V</div>
-					<div class="fill" draggable="true">Q</div>
-					<div class="fill" draggable="true">E</div>
-					<div class="fill" draggable="true">I</div>
-					<div class="fill" draggable="true">F</div>
-					<div class="fill" draggable="true">W</div>
-					<div class="fill" draggable="true">S</div>
-					<div class="fill" draggable="true">G</div>
 				</section>
 				<section>
 					<div class="fill" draggable="true">Y</div>
 					<div class="fill" draggable="true">L</div>
 					<div class="fill" draggable="true">C</div>
+				</section>
+				<section>
 					<div class="fill" draggable="true">K</div>
 					<div class="fill" draggable="true">N</div>
 					<div class="fill" draggable="true">O</div>
-					<div class="fill" draggable="true">X</div>
-					<div class="fill" draggable="true">Z</div>
-					<div class="fill" draggable="true">D</div>
-					<div class="fill" draggable="true">A</div>
-					<div class="fill" draggable="true">M</div>
-					<div class="fill" draggable="true">U</div>
-					<div class="fill" draggable="true">P</div>
 				</section>
 			</section>
 			<section id="button">
