feat: feat: jogo 2 completo

--- a/src/Jogo 2/Fase 2/index.html
+++ b/src/Jogo 2/Fase 2/index.html
@@ -17,14 +17,14 @@
 		<main>
 			<header>
 				<h1>Jogo da Sílaba</h1>
-				<p>Fase 1</p>
+				<p>Fase 2</p>
 			</header>
 			
 			<section id="options">
 				<section>
 					<div class="fill" draggable="true">CA</div>
 					<div class="fill" draggable="true">SA</div>
-					<div class="fill" draggable="true">LA</div>
+					<div class="fill" draggable="true">LA'</div>
 				</section>
 				<section>
 					<div class="fill" draggable="true">LU</div>
@@ -32,23 +32,24 @@
 					<div class="fill" draggable="true">BO</div>
 				</section>
 				<section>
-					<img src="../../assets/bola.png" alt="bola">
+					<img src="../../assets/cavalo.png" alt="bola">
 				</section>
 				<section>
-					<div class="fill" draggable="true">MA</div>
+					<div class="fill" draggable="true">VA</div>
 					<div class="fill" draggable="true">TO</div>
 					<div class="fill" draggable="true">TA</div>
 				</section>
 				<section>
 					<div class="fill" draggable="true">LE</div>
-					<div class="fill" draggable="true">BI</div>
+					<div class="fill" draggable="true">VI</div>
 					<div class="fill" draggable="true">LO</div>
 				</section>
 			</section>
 			<section id="answers">
 				<section>
-					<div class="empty" id="BO"></div>
-					<div class="empty" id="LA"></div>
+					<div class="empty" id="CA"></div>
+					<div class="empty" id="VA"></div>
+					<div class="empty" id="LO"></div>
 				</section>
 			</section>
 
