--- a/src/Jogo 3/index.html
+++ b/src/Jogo 3/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header>
-            <h1>Jogo da Sílaba</h1>
+            <h1>Jogo do Desenho</h1>
         </header>
         <canvas id="tela"></canvas>
         <script src="script.js"></script>
