feat: passando informação entre páginas

--- a/src/Jogo1/index.html
+++ b/src/Jogo1/index.html
@@ -83,12 +83,13 @@
 				</section>
 			</section>
 			<section id="button">
-				<div id="validar" onclick=validar()>
+				<div id="validar" onclick="validar('jogo1')">
 					Validar
 				</div>
 			</section>
 		</main>
 
 		<script src="script.js"></script>
+		<script src="./../main.js"></script>
 	</body>
 </html>
