--- a/src/Jogo2/Fase2/index.html
+++ b/src/Jogo2/Fase2/index.html
@@ -54,12 +54,13 @@
 			</section>
 
 			<section id="button">
-				<div id="validar" onclick=validar()>
+				<div id="validar" onclick="validar('jogo2F2')">
 					Validar
 				</div>
 			</section>
 		</main>
 
 		<script src="script.js"></script>
+		<script src="./../../main.js"></script>
 	</body>
 </html>
