--- a/src/Jogo2/Fase3/index.html
+++ b/src/Jogo2/Fase3/index.html
@@ -17,48 +17,50 @@
 		<main>
 			<header>
 				<h1>Jogo da Sílaba</h1>
-				<p>Fase 1</p>
+				<p>Fase 3</p>
 			</header>
 			
 			<section id="options">
 				<section>
 					<div class="fill" draggable="true">CA</div>
-					<div class="fill" draggable="true">SA</div>
-					<div class="fill" draggable="true">LA</div>
+					<div class="fill" draggable="true">RU</div>
+					<div class="fill" draggable="true">XOR</div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">LU</div>
+					<div class="fill" draggable="true">CHUR</div>
 					<div class="fill" draggable="true">BA</div>
 					<div class="fill" draggable="true">BO</div>
 				</section>
 				<section>
-					<img src="../../assets/bola.png" alt="bola">
+					<img src="../../assets/cachorro.png" alt="cachorro">
 				</section>
 				<section>
 					<div class="fill" draggable="true">MA</div>
-					<div class="fill" draggable="true">TO</div>
-					<div class="fill" draggable="true">TA</div>
+					<div class="fill" draggable="true">CHOR</div>
+					<div class="fill" draggable="true">CE</div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">LE</div>
-					<div class="fill" draggable="true">BI</div>
-					<div class="fill" draggable="true">LO</div>
+					<div class="fill" draggable="true">RO</div>
+					<div class="fill" draggable="true">KA</div>
+					<div class="fill" draggable="true">CHAR</div>
 				</section>
 			</section>
 			<section id="answers">
 				<section>
-					<div class="empty" id="BO"></div>
-					<div class="empty" id="LA"></div>
+					<div class="empty" id="CA"></div>
+					<div class="empty" id="CHOR"></div>
+					<div class="empty" id="RO"></div>
 				</section>
 			</section>
 
 			<section id="button">
-				<div id="validar" onclick=validar()>
+				<div id="validar" onclick="validar('jogo2F3')">
 					Validar
 				</div>
 			</section>
 		</main>
 
 		<script src="script.js"></script>
+		<script src="./../../main.js"></script>
 	</body>
 </html>
