--- a/src/Jogo2/Fase2/index.html
+++ b/src/Jogo2/Fase2/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="../../style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -14,6 +15,9 @@
 		<title>Jogo da Sílaba</title>
 	</head>
 	<body>
+    <div id="comecar">
+      <div class="validar" onclick="iniciarJogo()">Começar</div>
+    </div>
 		<main>
 			<header>
 				<h1>Jogo da Sílaba</h1>
