feat: enviaDados completo

--- a/src/Jogo3/index.html
+++ b/src/Jogo3/index.html
@@ -24,7 +24,7 @@
     <canvas id="tela"></canvas>
     <script src="script.js"></script>
     <script src="../main.js"></script>
-    <section id="button">
+    <section id="buttonJ3">
       <div id="validar" onclick="validar('jogo3')">Validar</div>
     </section>
   </body>
