feat: relatório construído e formatado

--- a/src/Jogo3/index.html
+++ b/src/Jogo3/index.html
@@ -19,7 +19,7 @@
       <div class="validar" onclick="iniciarJogo()">Começar</div>
     </div>
     <header>
-      <h1>Jogo do Desenho</h1>
+      <h1  id="jogo3">Jogo do Desenho</h1>
     </header>
     <canvas id="tela"></canvas>
     <script src="script.js"></script>
