--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           <input type="number" id="idade"/>
         </div>
         <div>
-          <a href="/relatório" class="validar">Admin</a>
+          <a href="./relatorio/index.html" class="validar">Admin</a>
           <div class="validar" onclick="getIdade()">Iniciar</div>
         </div>
       </section>
