fix: correção de texto fix: correcao lógica idade

--- a/src/Jogo2/Fase2/index.html
+++ b/src/Jogo2/Fase2/index.html
@@ -28,7 +28,7 @@
 				<section>
 					<div class="fill" draggable="true">CA</div>
 					<div class="fill" draggable="true">SA</div>
-					<div class="fill" draggable="true">LA'</div>
+					<div class="fill" draggable="true">LA</div>
 				</section>
 				<section>
 					<div class="fill" draggable="true">LU</div>
