feat: mudança das palavras, mudança lógica de acertos e script para relatório

--- a/src/Jogo2/Fase1/index.html
+++ b/src/Jogo2/Fase1/index.html
@@ -26,33 +26,35 @@
 			
 			<section id="options">
 				<section>
-					<div class="fill" draggable="true">CA</div>
+					<div class="fill" draggable="true">CAM</div>
 					<div class="fill" draggable="true">SA</div>
 					<div class="fill" draggable="true">LA</div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">LU</div>
+					<div class="fill" draggable="true">TA</div>
 					<div class="fill" draggable="true">BA</div>
-					<div class="fill" draggable="true">BO</div>
+					<div class="fill" draggable="true">TO</div>
 				</section>
 				<section>
-					<img src="../../assets/bola.png" alt="bola">
+					<img src="../../assets/cambalhota.png" alt="bola">
 				</section>
 				<section>
 					<div class="fill" draggable="true">MA</div>
-					<div class="fill" draggable="true">TO</div>
+					<div class="fill" draggable="true">LHO</div>
 					<div class="fill" draggable="true">TA</div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">LE</div>
+					<div class="fill" draggable="true">LHE</div>
 					<div class="fill" draggable="true">BI</div>
-					<div class="fill" draggable="true">LO</div>
+					<div class="fill" draggable="true">CEM</div>
 				</section>
 			</section>
 			<section id="answers">
 				<section>
-					<div class="empty" id="BO"></div>
-					<div class="empty" id="LA"></div>
+					<div class="empty" id="CAM"></div>
+					<div class="empty" id="BA"></div>
+					<div class="empty" id="LHO"></div>
+					<div class="empty" id="TA"></div>
 				</section>
 			</section>
 
