--- a/src/Jogo2/Fase2/index.html
+++ b/src/Jogo2/Fase2/index.html
@@ -27,33 +27,34 @@
 			<section id="options">
 				<section>
 					<div class="fill" draggable="true">CA</div>
-					<div class="fill" draggable="true">SA</div>
+					<div class="fill" draggable="true">PA</div>
 					<div class="fill" draggable="true">LA</div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">LU</div>
+					<div class="fill" draggable="true">PAS</div>
 					<div class="fill" draggable="true">BA</div>
-					<div class="fill" draggable="true">BO</div>
+					<div class="fill" draggable="true">NHO</div>
 				</section>
 				<section>
-					<img src="../../assets/cavalo.png" alt="bola">
+					<img src="../../assets/passarinho.png" alt="bola">
 				</section>
 				<section>
-					<div class="fill" draggable="true">VA</div>
-					<div class="fill" draggable="true">TO</div>
-					<div class="fill" draggable="true">TA</div>
+					<div class="fill" draggable="true">SA</div>
+					<div class="fill" draggable="true">PES</div>
+					<div class="fill" draggable="true">NHA</div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">LE</div>
-					<div class="fill" draggable="true">VI</div>
+					<div class="fill" draggable="true">RE</div>
+					<div class="fill" draggable="true">RI</div>
 					<div class="fill" draggable="true">LO</div>
 				</section>
 			</section>
 			<section id="answers">
 				<section>
-					<div class="empty" id="CA"></div>
-					<div class="empty" id="VA"></div>
-					<div class="empty" id="LO"></div>
+					<div class="empty" id="PAS"></div>
+					<div class="empty" id="SA"></div>
+					<div class="empty" id="RI"></div>
+					<div class="empty" id="NHO"></div>
 				</section>
 			</section>
 
