fix: mudança na ordem

--- a/src/Jogo2/Fase3/index.html
+++ b/src/Jogo2/Fase3/index.html
@@ -19,41 +19,42 @@
       <div class="validar" onclick="iniciarJogo()">Começar</div>
     </div>
 		<main>
-			<header>
+      <header>
 				<h1>Jogo da Sílaba</h1>
 				<p>Fase 3</p>
 			</header>
 			
 			<section id="options">
 				<section>
-					<div class="fill" draggable="true">CA</div>
-					<div class="fill" draggable="true">RU</div>
-					<div class="fill" draggable="true">XOR</div>
+					<div class="fill" draggable="true">CAM</div>
+					<div class="fill" draggable="true">SA</div>
+					<div class="fill" draggable="true">LA</div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">CHUR</div>
+					<div class="fill" draggable="true">TA</div>
 					<div class="fill" draggable="true">BA</div>
-					<div class="fill" draggable="true">BO</div>
+					<div class="fill" draggable="true">TO</div>
 				</section>
 				<section>
-					<img src="../../assets/cachorro.png" alt="cachorro">
+					<img src="../../assets/cambalhota.png" alt="bola">
 				</section>
 				<section>
 					<div class="fill" draggable="true">MA</div>
-					<div class="fill" draggable="true">CHOR</div>
-					<div class="fill" draggable="true">CE</div>
+					<div class="fill" draggable="true">LHO</div>
+					<div class="fill" draggable="true">TA</div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">RO</div>
-					<div class="fill" draggable="true">KA</div>
-					<div class="fill" draggable="true">CHAR</div>
+					<div class="fill" draggable="true">LHE</div>
+					<div class="fill" draggable="true">BI</div>
+					<div class="fill" draggable="true">CEM</div>
 				</section>
 			</section>
 			<section id="answers">
 				<section>
-					<div class="empty" id="CA"></div>
-					<div class="empty" id="CHOR"></div>
-					<div class="empty" id="RO"></div>
+					<div class="empty" id="CAM"></div>
+					<div class="empty" id="BA"></div>
+					<div class="empty" id="LHO"></div>
+					<div class="empty" id="TA"></div>
 				</section>
 			</section>
 
