--- a/src/Jogo2/Fase1/index.html
+++ b/src/Jogo2/Fase1/index.html
@@ -26,37 +26,37 @@
 			
 			<section id="options">
 				<section>
-					<div class="fill" draggable="true">CAM</div>
-					<div class="fill" draggable="true">SA</div>
-					<div class="fill" draggable="true">LA</div>
+					<div class="fill" draggable="true">CA</div>
+					<div class="fill" draggable="true">RU</div>
+					<div class="fill" draggable="true">XOR</div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">TA</div>
+					<div class="fill" draggable="true">CHUR</div>
 					<div class="fill" draggable="true">BA</div>
-					<div class="fill" draggable="true">TO</div>
+					<div class="fill" draggable="true">BO</div>
 				</section>
 				<section>
-					<img src="../../assets/cambalhota.png" alt="bola">
+					<img src="../../assets/cachorro.png" alt="cachorro">
 				</section>
 				<section>
 					<div class="fill" draggable="true">MA</div>
-					<div class="fill" draggable="true">LHO</div>
-					<div class="fill" draggable="true">TA</div>
+					<div class="fill" draggable="true">CHOR</div>
+					<div class="fill" draggable="true">CE</div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">LHE</div>
-					<div class="fill" draggable="true">BI</div>
-					<div class="fill" draggable="true">CEM</div>
+					<div class="fill" draggable="true">RO</div>
+					<div class="fill" draggable="true">KA</div>
+					<div class="fill" draggable="true">CHAR</div>
 				</section>
 			</section>
 			<section id="answers">
 				<section>
-					<div class="empty" id="CAM"></div>
-					<div class="empty" id="BA"></div>
-					<div class="empty" id="LHO"></div>
-					<div class="empty" id="TA"></div>
+					<div class="empty" id="CA"></div>
+					<div class="empty" id="CHOR"></div>
+					<div class="empty" id="RO"></div>
 				</section>
 			</section>
+
 
 			<section id="button">
 				<div id="validar" onclick="validar('jogo2F1')">
