feat: correções de acordo com o solicitado

--- a/src/Jogo1/index.html
+++ b/src/Jogo1/index.html
@@ -56,34 +56,34 @@
 			</section>
 			<section id="options">
 				<section>
-					<div class="fill" draggable="true">B</div>
-					<div class="fill" draggable="true">H</div>
-					<div class="fill" draggable="true">T</div>
-					<div class="fill" draggable="true">R</div>
-					<div class="fill" draggable="true">J</div>
-					<div class="fill" draggable="true">V</div>
-					<div class="fill" draggable="true">Q</div>
-					<div class="fill" draggable="true">E</div>
-					<div class="fill" draggable="true">I</div>
-					<div class="fill" draggable="true">F</div>
-					<div class="fill" draggable="true">W</div>
-					<div class="fill" draggable="true">S</div>
-					<div class="fill" draggable="true">G</div>
+					<div class="withFill"><div class="fill" draggable="true">B</div></div>
+					<div class="withFill"><div class="fill" draggable="true">H</div></div>
+					<div class="withFill"><div class="fill" draggable="true">T</div></div>
+					<div class="withFill"><div class="fill" draggable="true">R</div></div>
+					<div class="withFill"><div class="fill" draggable="true">J</div></div>
+					<div class="withFill"><div class="fill" draggable="true">V</div></div>
+					<div class="withFill"><div class="fill" draggable="true">Q</div></div>
+					<div class="withFill"><div class="fill" draggable="true">E</div></div>
+					<div class="withFill"><div class="fill" draggable="true">I</div></div>
+					<div class="withFill"><div class="fill" draggable="true">F</div></div>
+					<div class="withFill"><div class="fill" draggable="true">W</div></div>
+					<div class="withFill"><div class="fill" draggable="true">S</div></div>
+					<div class="withFill"><div class="fill" draggable="true">G</div></div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">Y</div>
-					<div class="fill" draggable="true">L</div>
-					<div class="fill" draggable="true">C</div>
-					<div class="fill" draggable="true">K</div>
-					<div class="fill" draggable="true">N</div>
-					<div class="fill" draggable="true">O</div>
-					<div class="fill" draggable="true">X</div>
-					<div class="fill" draggable="true">Z</div>
-					<div class="fill" draggable="true">D</div>
-					<div class="fill" draggable="true">A</div>
-					<div class="fill" draggable="true">M</div>
-					<div class="fill" draggable="true">U</div>
-					<div class="fill" draggable="true">P</div>
+					<div class="withFill"><div class="fill" draggable="true">Y</div></div>
+					<div class="withFill"><div class="fill" draggable="true">L</div></div>
+					<div class="withFill"><div class="fill" draggable="true">C</div></div>
+					<div class="withFill"><div class="fill" draggable="true">K</div></div>
+					<div class="withFill"><div class="fill" draggable="true">N</div></div>
+					<div class="withFill"><div class="fill" draggable="true">O</div></div>
+					<div class="withFill"><div class="fill" draggable="true">X</div></div>
+					<div class="withFill"><div class="fill" draggable="true">Z</div></div>
+					<div class="withFill"><div class="fill" draggable="true">D</div></div>
+					<div class="withFill"><div class="fill" draggable="true">A</div></div>
+					<div class="withFill"><div class="fill" draggable="true">M</div></div>
+					<div class="withFill"><div class="fill" draggable="true">U</div></div>
+					<div class="withFill"><div class="fill" draggable="true">P</div></div>
 				</section>
 			</section>
 			<section id="button">
