--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <main>
+      <div><img src="/src/assets/logo.png" alt="logo"></div>
       <section id="form">
         <div>
           <h2>Idade:</h2>
