feat: add titulo

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
   </head>
   <body>
     <main>
-      <div><img src="/src/assets/logo.png" alt="logo"></div>
+      <div>
+        <div>Projeto Crescer e Aprender na Pandemia</div>
+        <img src="assets/logo.png" alt="logo">
+      </div>
       <section id="form">
         <div>
           <h2>Idade:</h2>
