fix: correção para conseguir voltar a peça para o lugar anterior

--- a/src/Jogo2/Fase1/index.html
+++ b/src/Jogo2/Fase1/index.html
@@ -26,27 +26,27 @@
 			
 			<section id="options">
 				<section>
-					<div class="fill" draggable="true">CA</div>
-					<div class="fill" draggable="true">RU</div>
-					<div class="fill" draggable="true">XOR</div>
+					<div class="empty"><div class="fill" draggable="true">CA</div></div>
+					<div class="empty"><div class="fill" draggable="true">RU</div></div>
+					<div class="empty"><div class="fill" draggable="true">XOR</div></div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">CHUR</div>
-					<div class="fill" draggable="true">BA</div>
-					<div class="fill" draggable="true">BO</div>
+					<div class="empty"><div class="fill" draggable="true">CHUR</div></div>
+					<div class="empty"><div class="fill" draggable="true">BA</div></div>
+					<div class="empty"><div class="fill" draggable="true">BO</div></div>
 				</section>
 				<section>
 					<img src="../../assets/cachorro.png" alt="cachorro">
 				</section>
 				<section>
-					<div class="fill" draggable="true">MA</div>
-					<div class="fill" draggable="true">CHOR</div>
-					<div class="fill" draggable="true">CE</div>
+					<div class="empty"><div class="fill" draggable="true">MA</div></div>
+					<div class="empty"><div class="fill" draggable="true">CHOR</div></div>
+					<div class="empty"><div class="fill" draggable="true">CE</div></div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">RO</div>
-					<div class="fill" draggable="true">KA</div>
-					<div class="fill" draggable="true">CHAR</div>
+					<div class="empty"><div class="fill" draggable="true">RO</div></div>
+					<div class="empty"><div class="fill" draggable="true">KA</div></div>
+					<div class="empty"><div class="fill" draggable="true">CHAR</div></div>
 				</section>
 			</section>
 			<section id="answers">
