--- a/src/Jogo2/Fase2/index.html
+++ b/src/Jogo2/Fase2/index.html
@@ -26,27 +26,27 @@
 			
 			<section id="options">
 				<section>
-					<div class="fill" draggable="true">CA</div>
-					<div class="fill" draggable="true">PA</div>
-					<div class="fill" draggable="true">LA</div>
+					<div class="empty"><div class="fill" draggable="true">CA</div></div>
+					<div class="empty"><div class="fill" draggable="true">PA</div></div>
+					<div class="empty"><div class="fill" draggable="true">LA</div></div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">PAS</div>
-					<div class="fill" draggable="true">BA</div>
-					<div class="fill" draggable="true">NHO</div>
+					<div class="empty"><div class="fill" draggable="true">PAS</div></div>
+					<div class="empty"><div class="fill" draggable="true">BA</div></div>
+					<div class="empty"><div class="fill" draggable="true">NHO</div></div>
 				</section>
 				<section>
 					<img src="../../assets/passarinho.png" alt="bola">
 				</section>
 				<section>
-					<div class="fill" draggable="true">SA</div>
-					<div class="fill" draggable="true">PES</div>
-					<div class="fill" draggable="true">NHA</div>
+					<div class="empty"><div class="fill" draggable="true">SA</div></div>
+					<div class="empty"><div class="fill" draggable="true">PES</div></div>
+					<div class="empty"><div class="fill" draggable="true">NHA</div></div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">RE</div>
-					<div class="fill" draggable="true">RI</div>
-					<div class="fill" draggable="true">LO</div>
+					<div class="empty"><div class="fill" draggable="true">RE</div></div>
+					<div class="empty"><div class="fill" draggable="true">RI</div></div>
+					<div class="empty"><div class="fill" draggable="true">LO</div></div>
 				</section>
 			</section>
 			<section id="answers">
