--- a/src/Jogo2/Fase3/index.html
+++ b/src/Jogo2/Fase3/index.html
@@ -26,27 +26,27 @@
 			
 			<section id="options">
 				<section>
-					<div class="fill" draggable="true">CAM</div>
-					<div class="fill" draggable="true">SA</div>
-					<div class="fill" draggable="true">LA</div>
+					<div class="empty"><div class="fill" draggable="true">CAM</div></div>
+					<div class="empty"><div class="fill" draggable="true">SA</div></div>
+					<div class="empty"><div class="fill" draggable="true">LA</div></div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">TA</div>
-					<div class="fill" draggable="true">BA</div>
-					<div class="fill" draggable="true">TO</div>
+					<div class="empty"><div class="fill" draggable="true">TA</div></div>
+					<div class="empty"><div class="fill" draggable="true">BA</div></div>
+					<div class="empty"><div class="fill" draggable="true">TO</div></div>
 				</section>
 				<section>
 					<img src="../../assets/cambalhota.png" alt="bola">
 				</section>
 				<section>
-					<div class="fill" draggable="true">MA</div>
-					<div class="fill" draggable="true">LHO</div>
-					<div class="fill" draggable="true">TA</div>
+					<div class="empty"><div class="fill" draggable="true">MA</div></div>
+					<div class="empty"><div class="fill" draggable="true">LHO</div></div>
+					<div class="empty"><div class="fill" draggable="true">TA</div></div>
 				</section>
 				<section>
-					<div class="fill" draggable="true">LHE</div>
-					<div class="fill" draggable="true">BI</div>
-					<div class="fill" draggable="true">CEM</div>
+					<div class="empty"><div class="fill" draggable="true">LHE</div></div>
+					<div class="empty"><div class="fill" draggable="true">BI</div></div>
+					<div class="empty"><div class="fill" draggable="true">CEM</div></div>
 				</section>
 			</section>
 			<section id="answers">
